<resources>
    <string name="app_name">Community Service Tracker</string>

    <string name="username_string">Name: </string>
    <string name="name_string">Name</string>
    <string name="grade_string">Grade: </string>
    <string name="ssl_string">Volunteer Hours Total Goal: </string>
    <string name="ssl_current">Volunteer Hours Earned: </string>
    <string name="view_opportunities_string">New Opportunities</string>
    <string name="view_accepted_string">Accepted Opportunities </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>