<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/usernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="30dp"
        android:text="@string/username_string"
        android:textAppearance="?android:attr/textAppearanceLarge" >
    </TextView>

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/usernameLabel"
        android:layout_alignBottom="@+id/usernameLabel"
       />

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/usernameLabel"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="30dp"
        android:text="@string/name_string"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/nameLabel"
        android:layout_alignBottom="@+id/nameLabel"
        android:layout_alignStart="@+id/username"
        />

    <TextView
        android:id="@+id/gradeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameLabel"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="30dp"
        android:text="@string/grade_string"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    <TextView
        android:id="@+id/grade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/gradeLabel"
        android:layout_alignBottom="@+id/gradeLabel"
        android:layout_alignStart="@+id/username"
        />
    <TextView
        android:id="@+id/SSLLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gradeLabel"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="30dp"
        android:text="@string/ssl_string"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    <TextView
        android:id="@+id/numSSLHours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/SSLLabel"
        android:layout_alignBottom="@+id/SSLLabel"
        android:layout_alignStart="@+id/username" />
    <Button
    android:id="@+id/viewOpportunitiesButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
    android:text="@string/view_opportunities_string" />

    <Button
        android:id="@+id/viewProfleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/viewOpportunitiesButton"
        android:text="@string/view_profile_string" />


</RelativeLayout>
